--- a/chromeApp.html
+++ b/chromeApp.html
@@ -5,15 +5,25 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <span class="js-weather"></span>
         <div class="js-clock">
-<!--            <h1 class="js-title"></h1>-->
            <h1>00:00</h1>
         </div>
         <form class="js-form form">
             <input type="text" placeholder="What is your name?">
         </form>
         <h4 class="js-greetings greetings"></h4>
+        <form action="" class="js-toDoForm">
+            <input type="text" placeholder="write a to do">
+        </form>
+        <ul class="js-toDoList">
+            
+        </ul>
+
         <script src="clock.js"></script>
         <script src="gretting.js"></script>
+        <script src="todo.js"></script>
+        <script src="bg.js"></script>
+        <script src="weather.js"></script>
     </body>
 </html>
